--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		 <maven.compiler.source>1.8</maven.compiler.source>
-         <maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -31,6 +31,11 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>5.6.2</version> <!-- Use the latest version -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -70,7 +75,7 @@
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
 		</dependency>
-		
+
 
 		<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 		<dependency>
